# metannote

./: .gitignore  manager.py  metannotate  setup.cfg
metaannote/: datatypes.py  utils.py
metaannote/dataset/: _factory.py  data_format.py  dataset.py  datatypes.py  exceptions.py  handler.py  state.py  tests.py
metaannote/shortcuts/: io.py  manipulation.py  visual.py
