[metadata]
name = metaannote
version = 0.0.1.alpha
author = Armin Azhdehnia
author_email = armin.azhdehnia@gmail.com
description = tool for inspect, manipulate and visualize dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/armin-azh/metannote
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = metaanote
packages = find:
python_requires = >=3.6

[options.packages.find]
where = metaanote